--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1599,7 +1599,7 @@ main h1::after {
 }
 
 .profile-page .overview .left-side {
-    padding: 20px ;
+    padding: 20px;
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -1671,6 +1671,7 @@ main h1::after {
     .profile-page .overview .right-side {
         width: 100%;
     }
+
     .profile-page .overview .right-side .box {
         width: 100%;
     }
@@ -1773,7 +1774,7 @@ main h1::after {
 }
 
 @media (max-width: 767px) {
-    .profile-page .sk-ac .skills{
+    .profile-page .sk-ac .skills {
         width: 100%;
     }
 }
@@ -1784,11 +1785,11 @@ main h1::after {
 }
 
 .profile-page .sk-ac .skills ul li {
-   display: flex; 
-   flex-wrap: wrap;
-   gap: 10px;
-   padding: 20px 0;
-   border-bottom: 1px solid #eee;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
 }
 
 @media (max-width: 767px) {
@@ -1826,7 +1827,7 @@ main h1::after {
     }
 }
 
-.profile-page .sk-ac .activities > p {
+.profile-page .sk-ac .activities>p {
     color: gray;
     margin: 8px 0;
 }
@@ -1840,7 +1841,7 @@ main h1::after {
 }
 
 @media (max-width: 767px) {
-    .profile-page .sk-ac .activities ul li{
+    .profile-page .sk-ac .activities ul li {
         flex-direction: column;
     }
 }
@@ -1880,7 +1881,7 @@ main h1::after {
     gap: 10px;
 }
 
-.profile-page .sk-ac .activities ul li div p:nth-child(2) span:nth-child(2){
+.profile-page .sk-ac .activities ul li div p:nth-child(2) span:nth-child(2) {
     color: gray;
 }
 
@@ -1889,3 +1890,95 @@ main h1::after {
 
 /* =============Project page================= */
 
+.project-page {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 20px;
+    margin-inline: 20px;
+    margin-bottom: 20px;
+}
+
+.project-page .box {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    position: relative;
+}
+
+.project-page .box>p:nth-of-type(1) {
+    margin: 0;
+    font-size: 20px;
+}
+
+.project-page .box>p:nth-of-type(2) {
+    color: gray;
+    margin: 8px 0;
+}
+
+.project-page .box .info .pics img {
+    width: 40px;
+    border: 2px solid white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.project-page .box .info .pics img:hover {
+    position: relative;
+    z-index: 9;
+}
+
+.project-page .box .info .pics img:not(:first-of-type) {
+    margin-left: -20px;
+}
+
+.project-page .box .types {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.project-page .box .types span {
+    color: black;
+    padding: 5px 10px;
+    background-color: #eee;
+    border-radius: 4px;
+}
+
+.project-page .box>div>div {
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.project-page .box>div>div:last-of-type {
+    border: none;
+    padding-bottom: 0;
+}
+
+.project-page .box .info .ph-pr {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.project-page .box .info .ph-pr .prog-holder {
+    width: 50%;
+    height: 4px;
+    border-radius: 10px;
+    background-color: #eee;
+}
+
+.project-page .box .info .ph-pr .prog-holder span {
+    background-color: red;
+    display: block;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.project-page .box .info .ph-pr>span {
+    color: gray;
+    font-size: 14px;
+}
+
+
+
+/* =========Courses Page===================== */
