--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2062,5 +2062,459 @@ main h1::after {
 
 
 
+
 /* =================Friends Page====================== */
 
+.friends-page {
+    display: grid;
+    margin-inline: 20px;
+    margin-bottom: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+@media (max-width: 600px) {
+    .friends-page {
+        grid-template-columns: minmax(200px, 1fr);
+    }
+}
+
+.friends-page .box {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white;
+    position: relative;
+}
+
+.friends-page .box .head-fr .contact {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.friends-page .box .head-fr .contact a {
+    color: black;
+    background-color: #eee;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.friends-page .box .head-fr .contact a i {
+    font-size: 13px;
+}
+
+.friends-page .box .head-fr {
+    text-align: center;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+.friends-page .box .head-fr img {
+    width: 100px;
+    clip-path: circle();
+}
+
+@media (max-width: 600px) {
+    .friends-page .box .head-fr img {
+        margin-top: 20px;
+    }
+}
+
+.friends-page .box .head-fr h4 {
+    margin-bottom: 0;
+}
+
+.friends-page .box .head-fr p {
+    color: gray;
+    margin: 6px 0 0 0;
+    font-size: 14px;
+}
+
+
+.friends-page .box .body-fr {
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.friends-page .box .body-fr>div:not(:last-child) {
+    margin-bottom: 6px;
+}
+
+.friends-page .box .body-fr>div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+
+.friends-page .box .foot-fr {
+    padding-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 600px) {
+    .friends-page .box .foot-fr {
+        flex-direction: column;
+        gap: 15px;
+    }
+}
+
+.friends-page .box .foot-fr p {
+    color: gray;
+    font-size: 13px;
+    margin: 0;
+}
+
+.friends-page .box .foot-fr .btns a {
+    padding: 4px 10px;
+    gap: 6px;
+    border-radius: 5px;
+    color: white;
+}
+
+.friends-page .box .foot-fr .btns a:first-child {
+    background-color: #0075ff;
+}
+
+.friends-page .box .foot-fr .btns a:last-child {
+    background-color: #f44336;
+}
+
+
+
+
+/* ===========================Files Page====================== */
+
+.files-page {
+    display: flex;
+    gap: 20px;
+    margin-inline: 20px;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 600px) {
+    .files-page {
+        flex-direction: column-reverse;
+    }
+}
+
+.files-page .files {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+}
+
+@media (max-width: 600px) {
+    .files-page .files {
+        width: 100%;
+    }
+}
+
+.files-page .files .box {
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    position: relative;
+}
+
+.files-page .files .box .pre i {
+    color: gray;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+
+.files-page .files .box .pre {
+    text-align: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.files-page .files .box .pre span {
+    color: gray;
+    display: block;
+    text-align: left;
+}
+
+.files-page .files .box .pre img {
+    width: 50px;
+    margin-top: 15px;
+    transition: .3s;
+}
+
+.files-page .files .box:hover .pre img {
+    transform: rotate(6deg);
+}
+
+
+.files-page .files .box .data {
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: gray;
+    font-size: 13px;
+}
+
+
+.files-page .file-stats {
+    background-color: white;
+    border-radius: 10px;
+    min-width: 250px;
+    padding: 20px;
+    height: min-content;
+}
+
+@media (max-width: 600px) {
+    .files-page .file-stats {
+        width: 100%;
+    }
+}
+
+.files-page .file-stats .holder-f {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid #eee;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.files-page .file-stats .holder-f .infos {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.files-page .file-stats .holder-f .infos p {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.files-page .file-stats .holder-f .infos p span {
+    color: gray;
+}
+
+.files-page .file-stats .holder-f:nth-of-type(1) .infos::before {
+    content: "\f1c1";
+    font-family: "font awesome 5 free";
+    width: 40px;
+    height: 40px;
+    background-color: #cce3ff;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: blue;
+}
+
+.files-page .file-stats .holder-f:nth-of-type(2) .infos::before {
+    content: "\f302";
+    font-family: "font awesome 5 free";
+    width: 40px;
+    height: 40px;
+    background-color: #d3f3df;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: green;
+}
+
+.files-page .file-stats .holder-f:nth-of-type(3) .infos::before {
+    content: "\f1c2";
+    font-family: "font awesome 5 free";
+    width: 40px;
+    height: 40px;
+    background-color: #fdd9d7;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: red;
+}
+
+.files-page .file-stats .holder-f:nth-of-type(4) .infos::before {
+    content: "\f6dd";
+    font-family: "font awesome 5 free";
+    font-weight: 900;
+    width: 40px;
+    height: 40px;
+    background-color: #fdecce;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: orange;
+}
+
+.files-page .file-stats .holder-f .size {
+    color: gray;
+    font-size: 15px;
+}
+
+.files-page .file-stats a {
+    color: white;
+    background-color: #0075ff;
+    padding: 10px 15px;
+    display: block;
+    width: fit-content;
+    margin: 15px auto 0;
+    border-radius: 8px;
+}
+
+.files-page .file-stats a:hover {
+    filter: brightness(90%);
+}
+
+.files-page .file-stats a:hover i {
+    animation: arr .5s linear alternate infinite;
+}
+
+@keyframes arr {
+    form {
+        transform: translateY(0px);
+    }
+
+    to {
+        transform: translateY(-5px);
+    }
+}
+
+
+
+/* =======================Plans page========================= */
+
+.plans-page {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    gap: 20px;
+    margin-inline: 20px;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+    .plans-page {
+        grid-template-columns: minmax(200px, 1fr);
+    }
+}
+
+.plans-page .box {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.plans-page .box .top {
+    padding: 20px;
+    outline: 3px;
+    outline-style: solid;
+    outline-offset: 4px;
+}
+
+.plans-page .box:nth-child(1) .top {
+    background-color: #22c55e;
+    outline-color: #22c55e;
+}
+
+.plans-page .box:nth-child(2) .top {
+    background-color: #0075ff;
+    outline-color: #0075ff;
+}
+
+.plans-page .box:nth-child(3) .top {
+    background-color: #f59e0b;
+    outline-color: #f59e0b;
+}
+
+.plans-page .box .top p {
+    margin: 0;
+    font-size: 26px;
+    color: white;
+    text-align: center;
+}
+
+.plans-page .box .top div {
+    font-size: 50px;
+    color: white;
+    position: relative;
+    margin: 0 auto;
+    width: fit-content;
+}
+
+.plans-page .box .top div::before {
+    content: "$";
+    position: absolute;
+    top: 5px;
+    left: -15px;
+    font-size: 18px;
+}
+
+.plans-page .box .features {
+    margin-top: 20px;
+}
+
+.plans-page .box .features p {
+    margin: 0;
+    padding: 15px 0;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.plans-page .box .features p::after {
+    content: "\f05a";
+    font-family: "font awesome 5 free";
+    font-weight: 900;
+    font-size: 14px;
+    color: gray;
+    right: 0;
+    position: absolute;
+    cursor: pointer;
+}
+
+.plans-page .box .features p i.fa-check {
+    color: #22c55e;
+}
+
+.plans-page .box .features p i.fa-xmark {
+    color: red;
+}
+
+.plans-page .box .features a {
+    color: white;
+    padding: 4px 10px;
+    display: block;
+    width: fit-content;
+    border-radius: 4px;
+    margin-top: 15px;
+}
+
+.plans-page .box:nth-child(1) .features a {
+    background-color: #22c55e;
+}
+
+.plans-page .box:nth-child(2) .features a {
+    background-color: #0075ff;
+}
+
+
+.plans-page .box:nth-child(3) .features .notation {
+    color: gray;
+    font-size: 20px;
+    padding-top: 15px;
+    text-align: center;
+}
